# startpage-server

./: .env  .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml.example
migrations/: 20231125065411_user.up.sql  20231126121150_category.down.sql  20231126121150_category.up.sql  20231126151613_user.down.sql  20231126151613_user.up.sql  20231127033035_site.up.sql  20231127033326_category_site.down.sql  20231127033326_category_site.up.sql  20231215054513_site.down.sql  20231215054513_site.up.sql  20231225072650_category.down.sql  20231225072650_category.up.sql  20240119144020_category.down.sql  20240119144020_category.up.sql
src/: config.rs  errors.rs  guards.rs  handlers.rs  lib.rs  middlewares.rs  models.rs  request.rs  response.rs  routes.rs  schema.rs  state.rs  utils.rs
src/guards/: jwt.rs  remote_ip.rs
src/handlers/: auth.rs  category.rs  site.rs  upload.rs  user.rs
src/middlewares/: jwt.rs  token.rs
src/models/: category.rs  category_site.rs  site.rs  user.rs
src/request/: auth.rs  category.rs  site.rs  user.rs
src/response/: auth.rs  category.rs  site.rs  user.rs
src/routes/: auth.rs  category.rs  site.rs  upload.rs  user.rs
