[package]
name = "startpage-server"
version = "0.1.0"
edition = "2021"

default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
rocket = { version = "0.5.0", features = ["json", "uuid"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "migrate", "uuid", "chrono" ] }

[[bin]]
name = "server"

[lib]
name = "startpage"
path = "src/lib.rs"
