[package]
name = "startpage-server"
authors = ["HUANG Cheng <cheng@duck.com>"]
version = "0.1.0"
edition = "2021"

default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
cookie = "0.18.0"
derive_more = "0.99.17"
dotenvy = "0.15.7"
fern = "0.6.2"
jsonwebtoken = { version = "9.1.0", default-features = false }
log = "0.4.20"
regex = "1.10.2"
rocket = { version = "0.5.0", features = ["json", "uuid"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_mysql"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "migrate", "uuid", "chrono" ] }

[[bin]]
name = "server"

[lib]
name = "startpage"
path = "src/lib.rs"
