[package]
name = "startpage-server"
authors = ["HUANG Cheng <cheng@duck.com>"]
repository = "https://github.com/huangcheng/startpage-server"
version = "0.1.0"
edition = "2021"

default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
cookie = "0.18.0"
derive_more = "0.99.17"
fern = "0.6.2"
jsonwebtoken = { version = "9.1.0", default-features = false }
log = "0.4.20"
redis = { version = "0.24.0", features = ["tokio-comp"] }
regex = "1.10.2"
rocket = { version = "0.5.0", features = ["json", "uuid"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_mysql", "deadpool_redis"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "migrate", "uuid", "chrono" ] }
tokio = { version = "1.34.0", features = ["fs"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[[bin]]
name = "server"

[lib]
name = "startpage"
path = "src/lib.rs"
